@@ -5,6 +5,8 @@ NEW FUNCTIONS:
 MINOR:
   * spectrogram(), getLoudness(): better temporal alignment of the waveform, spectrogram, and loudness contour
   * analyze(), analyzeFolder(): more precise time stampts for STFT frames
+  * getLoudness(), analyze(): option to specify the "scale" of input waveforms (for audio files, the scale is read automatically), making loudness estimates dependent on the actual vs. theoretically possible amplitude; all sounds were effectively normalized to max amplitude in earlier versions
+
 
           CHANGES IN SOUNDGEN VERSION 1.3.2 [10-January-2019]
 MINOR:
